sec time commit by pyh233

--- a/flaskapp/templates/addFaceMsg.html
+++ b/flaskapp/templates/addFaceMsg.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>人脸添加界面</title>
 </head>
 <body>
-
+    <form action="/addFace" method="post">
+        <button type="submit">添加</button>
+    </form>
 </body>
 </html>
